# DJ-application-

./: .gitignore  CMakeLists.txt  CODE_ORGANIZATION.md  DJAudioPlayer.cpp  DJAudioPlayer.h  DeckGUI.cpp  DeckGUI.h  DeckState.h  GlossyButtonLookAndFeel.cpp  GlossyButtonLookAndFeel.h  ITrackFeature.h  Main.cpp  MainComponent.cpp  MainComponent.h  NEW_FEATURES.md  Otodecks.jucer  PlaylistComponent.cpp  PlaylistComponent.h  README.md
Builds/MacOSX/: Info-App.plist
Builds/MacOSX/Otodecks.xcodeproj/: project.pbxproj
Builds/MacOSX/Otodecks.xcodeproj/project.xcworkspace/xcuserdata/aishwaryalakshmisreenivasan.xcuserdatad/: UserInterfaceState.xcuserstate
Builds/MacOSX/Otodecks.xcodeproj/xcuserdata/aishwaryalakshmisreenivasan.xcuserdatad/xcschemes/: xcschememanagement.plist
JuceLibraryCode/: JuceHeader.h
